--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.12.1.1</version>
-            <scope>test</scope><!-- it is included only during tests -->
+            <version>10.12.1.1</version><!-- it is included only during tests -->
+            <type>jar</type>
         </dependency>
     </dependencies>
 
