--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>10.12.1.1</version><!-- it is included only during tests -->
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.6</version>
+        </dependency>
     </dependencies>
 
     <licenses>
