--- a/src/main/resources/texty.properties
+++ b/src/main/resources/texty.properties
@@ -10,7 +10,7 @@ room=Room
 start_date=Start Date
 end_date=End Date
 price=Price
-date_format=(dd.mm.yyyy)
+date_format=(yyyy-mm-dd)
 new_guest=New Guest
 name=Name
 email=E-mail
